--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ecommerce-proxy",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -9,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-proxy-middleware": "^3.0.3"
   }
